[gd_scene load_steps=4 format=3 uid="uid://ctinrvrsy0r3j"]

[ext_resource type="Texture2D" uid="uid://b8fvd1kce6b7c" path="res://Menu/bglogin.png" id="1_pv436"]
[ext_resource type="Script" path="res://Menu/ProfileScreen.gd" id="1_r8ky7"]
[ext_resource type="AudioStream" uid="uid://djqoicytg4bjc" path="res://sound/login.ogg" id="3_g7x73"]

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8ky7")
metadata/_edit_horizontal_guides_ = [90.0]
metadata/_edit_vertical_guides_ = [324.0, 487.0]

[node name="Profile" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -168.0
offset_right = 227.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pv436")

[node name="LoginLabel" type="Label" parent="Profile"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorLabel" type="Label" parent="Profile"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.635294, 0, 0.203922, 1)
horizontal_alignment = 1
autowrap_mode = 2

[node name="LabelName" type="Label" parent="Profile"]
layout_mode = 0
offset_left = 53.5
offset_top = 90.0
offset_right = 133.5
offset_bottom = 116.0
text = "Username"

[node name="Name" type="LineEdit" parent="Profile/LabelName"]
layout_mode = 0
offset_top = 27.0
offset_right = 350.0
offset_bottom = 58.0

[node name="LabelPass" type="Label" parent="Profile"]
layout_mode = 0
offset_left = 53.5
offset_top = 168.0
offset_right = 128.5
offset_bottom = 194.0
text = "Password"

[node name="Password" type="LineEdit" parent="Profile/LabelPass"]
layout_mode = 0
offset_top = 27.0
offset_right = 350.0
offset_bottom = 58.0
secret = true

[node name="PlayAnon" type="Button" parent="Profile"]
layout_mode = 0
offset_left = 53.5
offset_top = 249.0
offset_right = 216.5
offset_bottom = 280.0
text = "Play Anonymously"

[node name="Login" type="Button" parent="Profile"]
visible = false
layout_mode = 0
offset_left = 53.5
offset_top = 249.0
offset_right = 129.5
offset_bottom = 280.0
text = "Login"

[node name="Register" type="Button" parent="Profile"]
visible = false
layout_mode = 0
offset_left = 140.5
offset_top = 249.0
offset_right = 215.5
offset_bottom = 280.0
text = "Register"

[node name="BackBtn" type="Button" parent="Profile"]
layout_mode = 0
offset_left = 10.5
offset_top = 11.0
offset_right = 61.5
offset_bottom = 42.0
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g7x73")
autoplay = true

[connection signal="text_submitted" from="Profile/LabelName/Name" to="." method="_on_name_text_submitted"]
[connection signal="text_changed" from="Profile/LabelPass/Password" to="." method="_on_password_text_changed"]
[connection signal="text_submitted" from="Profile/LabelPass/Password" to="." method="_on_password_text_submitted"]
[connection signal="pressed" from="Profile/PlayAnon" to="." method="_on_play_anon_pressed"]
[connection signal="pressed" from="Profile/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Profile/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="Profile/BackBtn" to="." method="_on_back_btn_pressed"]
